auto run action on push

--- a/.github/workflows/db.yml
+++ b/.github/workflows/db.yml
@@ -4,6 +4,9 @@ on:
   workflow_dispatch:
   schedule:
     - cron: "0 0,6,12,18 * * *"
+  push:
+    paths:
+      - data/handles.json
 
 permissions:
   contents: write
